# venvy

./: .gitignore  .pre-commit-config.yaml  .woodpecker.yml  LICENSE  README.md  README.rst  __main__.py  pyproject.toml  requirements-dev.txt  tox.ini  venvy.py
.github/workflows/: main.yml  test.yml
tests/: main_test.py  parse_query_test.py
tests/resources/: executable  executable.bat
venvy/: main.py
