[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "venvy"
description = "A very opinionated virtualenv wrapper for an even simpler venv management."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "ISC License"}
authors = [
    { name = "Nikita Karamov", email = "me@kytta.dev" },
]
maintainers = [
    { name = "Nikita Karamov", email = "me@kytta.dev" },
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "virtualenv",
    "importlib_metadata;python_version<'3.8'"
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/kytta/venvy"
Issues = "https://github.com/kytta/venvy/issues"

[project.scripts]
venvy = "venvy:main"


[tool.autopep8]
ignore = ["W503"]

[tool.coverage.run]
plugins = ["covdefaults"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "--tb=short --showlocals"

[tool.ruff]
line-length = 79
target-version = "py38"

select = [
    "F",       # pyflakes
    "E", "W",  # pycodestyle
    "C90",     # mccabe
    "N",       # pep8-naming
    "YTT",     # flake8-2020
    "S",       # bandit
    "BLE",     # flake8-blind-except
    "FBT",     # flake8-boolean-trap
    "B",       # flake8-bugbear
    "A",       # flake8-builtins
    "C4",      # flake8-comprehensions
    "DTZ",     # flake8-datetimez
    "EM",      # flake8-errmsg
    "ISC",     # flake8-implicit-str-concat
    "ICN",     # flake8-import-conventions
    "G",       # flake8-logging-format
    "INP",     # flake8-no-pep420
    "PIE",     # flake8-pie
    "T20",     # flake8-print
    "Q",       # flake8-quotes
    "RSE",     # flake8-raise
    "RET",     # flake8-return
    "SLF",     # flake8-self
    "SIM",     # flake8-simplify
    "ARG",     # flake8-unused-arguments
    "ERA",     # eradicate
    "PL",      # pylint
    "TRY",     # tryceratops
    "RUF",     # ruff
]


[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.flake8-quotes]
inline-quotes = "double"

[tool.setuptools_scm]
